--- a/stable/velero/templates/backups.yaml
+++ b/stable/velero/templates/backups.yaml
@@ -1,17 +1,17 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: backups.ark.heptio.com
+  name: backups.velero.io
   labels:
-    chart: {{ template "ark.chart" . }}
+    chart: {{ template "velero.chart" . }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
-    app: {{ template "ark.name" . }}
+    app: {{ template "velero.name" . }}
   annotations:
     "helm.sh/hook": crd-install
     "helm.sh/hook-delete-policy": "before-hook-creation"
 spec:
-  group: ark.heptio.com
+  group: velero.io
   version: v1
   scope: Namespaced
   names:
