--- a/stable/velero/templates/deletebackuprequests.yaml
+++ b/stable/velero/templates/deletebackuprequests.yaml
@@ -1,17 +1,17 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: deletebackuprequests.ark.heptio.com
+  name: deletebackuprequests.velero.io
   labels:
-    chart: {{ template "ark.chart" . }}
-    heritage: {{ .Release.Service }}
-    release: {{ .Release.Name }}
-    app: {{ template "ark.name" . }}
+    chart: { { template "velero.chart" . } }
+    heritage: { { .Release.Service } }
+    release: { { .Release.Name } }
+    app: { { template "velero.name" . } }
   annotations:
     "helm.sh/hook": crd-install
     "helm.sh/hook-delete-policy": "before-hook-creation"
 spec:
-  group: ark.heptio.com
+  group: velero.io
   version: v1
   scope: Namespaced
   names:
