--- a/stable/velero/values.yaml
+++ b/stable/velero/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: gcr.io/heptio-images/ark
+  repository: gcr.io/heptio-images/velero
   tag: v0.10.1
   pullPolicy: IfNotPresent
 
@@ -16,13 +16,13 @@ rbac:
 resources: {}
 
 # this is the k8s spec block for initContainers:
-initContainers: []
+initContainers:
+  []
   # - name:
   #   image:
   #   volumeMounts:
   #     - name: plugins
   #       mountPath: /target
-
 
 serviceAccount:
   server:
@@ -34,7 +34,7 @@ tolerations: []
 nodeSelector: {}
 
 ## Parameters for the ' default' Config resource
-## See https://heptio.github.io/ark/v0.9.0/config-definition
+## See https://heptio.github.io/velero/v0.9.0/config-definition
 configuration:
   provider:
 
