--- a/stable/velero/templates/restic-daemonset.yaml
+++ b/stable/velero/templates/restic-daemonset.yaml
@@ -59,7 +59,7 @@ spec:
                 name: {{ template "velero.secretName" . }}
           {{- end }}
           env:
-            - name: HEPTIO_ARK_NAMESPACE
+            - name: VELERO_NAMESPACE
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.namespace
@@ -67,7 +67,7 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
-            - name: ARK_SCRATCH_DIR
+            - name: VELERO_SCRATCH_DIR
               value: /scratch
             {{- if eq $provider "aws" }}
             - name: AWS_SHARED_CREDENTIALS_FILE
